--- a/app/templates/training.html
+++ b/app/templates/training.html
@@ -20,92 +20,92 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic1.png">
             <div class="carousel-caption d-none d-md-block">
                 <p style="color:black;">Let's go over how this study will work. Click the arrow on the right to go to the next screen.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic1.png">
             <div class="carousel-caption d-none d-md-block">
                 <p style="color:black;">You will be playing a sorting game where you place each card in either the left bin or the right bin.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic1.png">
             <div class="carousel-caption d-none d-md-block">
                 <p style="color:black;">The cards have four different properties: color, number, shape, and shading. These properties determine which bin the card belongs in based on a rule.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic2.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">Meet the robot who will help you through the game.</p>
+                <p style="color:blue;">Meet the robot who will help you through the game.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic5.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">We will be recording your facial features as you play the game. You have already checked that your camera is working.
+                <p style="color:blue;">We will be recording your facial features as you play the game. You have already checked that your camera is working.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic6.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">Let's go over what you will be doing. You will be playing the game through 2 times, with a different rule each time.</p>
+                <p style="color:blue;">Let's go over what you will be doing. You will be playing the game through 2 times, with a different rule each time.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic6.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">The robot will choose a rule and will play a few rounds of the game.</p>
+                <p style="color:blue;">The robot will choose a rule and will play a few rounds of the game.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic6.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">Then it will be your turn to play! Make your best guess about where the card goes. Drag it to either the left or right bin.</p>
+                <p style="color:blue;">Then it will be your turn to play! Make your best guess about where the card goes. Drag it to either the left or right bin.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic8.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">You will choose how confident you are in your choice.
+                <p style="color:blue;">You will choose how confident you are in your choice.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic6.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">The robot will give you feedback about whether you got it right. And then you will sort another card.</p>
+                <p style="color:blue;">The robot will give you feedback about whether you got it right. And then you will sort another card.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic9.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">After you finish sorting all the cards, you will complete a short survey about your experience.
+                <p style="color:blue;">After you finish sorting all the cards, you will complete a short survey about your experience.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic10.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">After the survey, the robot will give you a new rule to learn.
+                <p style="color:blue;">After the survey, the robot will give you a new rule to learn.
                 </p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic12.png">
             <div class="carousel-caption d-none d-md-block">
-                <p style="color:black;">After playing the game twice, you will receive a random code to enter into Prolific so you receive credit for completing this survey.</p>
+                <p style="color:blue;">After playing the game twice, you will receive a random code to enter into Prolific so you receive credit for completing this survey.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="../static/train_0.png">
+            <img class="d-block w-100" src="../static/pic12.png">
             <div class="carousel-caption d-none d-md-block">
                 <form action="" method="post">
                     {{ form.hidden_tag() }} {{ form.submit_training(class="btn btn-primary btn-lg w-100") }}
@@ -114,11 +114,11 @@
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="carousel-control-prev-icon" aria-hidden="true" color="blue"></span>
         <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="carousel-control-next-icon" aria-hidden="true" color="blue"></span>
         <span class="sr-only">Next</span>
     </a>
 </div>
