--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -108,3 +108,51 @@
     font-size: 55px;
     color: red;
 }
+
+.video {
+    display: none;
+    float: right;
+    z-index: 9999;
+    position: relative;
+}
+
+.recording {
+    position: absolute;
+    z-index: 2;
+    color: red;
+    text-align: center;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    display: none;
+}
+
+#testVideo {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-bottom: 100px;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-bottom: 10px;
+}
+
+#startButton {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+#instructions {
+    padding-left: 5%;
+    padding-right: 5%;
+    margin-bottom: 20px;
+}
